# vaka

./: .gitignore  README.md  dev-app-update.yml  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.web.json
electron/: main.cjs  preload.cjs
resources/: lato_font_vectors.json
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  ocr.rs  ocr_config.rs
src/Pages/: LoadingPage.tsx
src/api/: api.ts  types.ts
src/components/: Header.tsx  Menu.tsx
src/main/: index.ts
src/main/ipc/: api.ts  index.ts  ocr.ts  system.ts
src/main/ocr/: albumArtData.ts  albumArtOCR.ts  graphics.ts  songsData.ts
src/main/ocr/data/: albumArtData.ts
src/main/ocr/process/: albumArtOCR.ts  numOCR.ts
src/ocr/: processor.ts
src/pages/: LoadingPage.tsx  UploadPage.tsx
src/preload/: index.d.ts  index.ts
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/Pages/: loading.tsx
src/renderer/src/assets/: base.css  main.css
src/renderer/src/components/: AppHeader.tsx  AppMenu.tsx
src/renderer/src/hooks/: useInitialDataLoader.ts
src/renderer/src/store/: useDataStore.ts
src/types/: api.ts  global.d.ts  index.ts  song.ts
