[package]
name = "vaka"
version = "0.1.0"
description = "a V APP"
authors = ["Ren-deRing"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vaka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
image = "0.25.8"
serde_json = "1.0.145"
paddle-ocr-rs = "0.6.1"
strsim = "0.11.1"
serde = "1.0.227"
rayon = "1.11.0"
lazy_static = "1.5.0"
